# FounderX

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  validator_crew.py
backend/app/api/: router.py
backend/app/api/routes/: decisions.py  founders.py  (+2 more)
backend/app/core/: __init__.py  errors.py  settings.py
backend/app/domain/: __init__.py  founders.py  investment_memos.py  memos.py  signals.py
backend/app/integrations/: __init__.py
backend/app/intelligence/: __init__.py  contradiction_detection.py  decision_service.py  entity_confidence.py  evidence_classification.py  evidence_intelligence.py  evidence_registry.py  evidence_reliability.py  evidence_verification.py  founder_extraction.py  founder_intelligence.py  founder_pipeline.py  graph.py  identifiers.py  investment_intelligence.py  llm_normalization.py  normalization.py  profile_models.py  research_agent.py  search_planner.py  state.py  unknown_detection.py
backend/app/persistence/: __init__.py  orchestrator.py
backend/tests/: test_cors.py  test_founder_analyze_route.py  test_founder_extraction.py  test_founder_intelligence_route.py  test_founder_pipeline_integration.py  test_founder_structure_route.py  test_intelligence_graph.py  test_llm_normalization.py  test_mongodb_gateway.py  test_normalization.py  test_persistence_orchestrator.py  test_profile_models.py  test_research_agent.py  test_research_route.py  test_search_planner.py
(+125 files in other folders)
