[project]
name = "vc-brain-backend"
version = "0.1.0"
description = "Intelligence, memory, and media layer for VC Brain"
requires-python = ">=3.12,<3.14"
dependencies = [
  "crewai>=1.0.0,<2",
  "elevenlabs>=2.0.0,<3",
  "email-validator>=2.2.0,<3",
  "fastapi>=0.116.0,<1",
  "langgraph>=0.6.0,<2",
  "openai>=1.100.0,<2",
  "pydantic-settings>=2.10.0,<3",
  "python-multipart>=0.0.20,<1",
  "supabase>=2.18.0,<3",
  "tavily-python>=0.7.0,<1",
  "uvicorn[standard]>=0.35.0,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1",
  "pytest>=8.4.0,<9",
  "pytest-asyncio>=1.1.0,<2",
  "ruff>=0.12.0,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
